Practice done for today

--- a/index.html
+++ b/index.html
@@ -5,33 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Products</title>
+    <script src="https://kit.fontawesome.com/31a22b3922.js" crossorigin="anonymous"></script>
+    <script src="./collapse.js/collapse.js" defer></script>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <!-- navigation -->
     <nav class="navbar">
         <h1>Influencer Products</h1>
-        <section class="navigaion-container">
+        <section class="navigation-container">
             <ul>
                 <li>Home</li>
                 <li>Products</li>
                 <li>Sign-up</li>
                 <li>Log in</li>
             </ul>
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <i class="fas fa-shopping-cart"></i>
         </section>
+        <i style="display: none;" class="fas fa-bars"></i>
+        <i style="display: none;" class="fas fa-shopping-cart shopping-cart"></i>
     </nav>
     <!-- banner for this website -->
-    <header class="header-container" role="banner"></header>
+    <header class="header-container" role="banner">
+        <article class="header-article">
+            <div>
+                <h1 class="header-title">Start your Journey as
+                    Influencer</h1>
+                <p class="header-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros.
+                    Lectus faucibus.</p>
+                <a href="#" class="header-button"><button>Preebook now <i class="fa-solid fa-arrow-right"></i></button></a>
+            </div>
+        </article>
+        <figure class="header-image">
+            <img src="./assets/images/main-camera.png" alt="camera image">
+            <div></div>
+        </figure>
+    </header>
 
     <!-- main elements -->
     <main>
         <ul class="brands-container">
-            <li class="brand-item"><a href="" class="brand-link"><img src="" alt=""></a></li>
-            <li class="brand-item"><a href="" class="brand-link"><img src="" alt=""></a></li>
-            <li class="brand-item"><a href="" class="brand-link"><img src="" alt=""></a></li>
-            <li class="brand-item"><a href="" class="brand-link"><img src="" alt=""></a></li>
-            <li class="brand-item"><a href="" class="brand-link"><img src="" alt=""></a></li>
-            <li class="brand-item"><a href="" class="brand-link"><img src="" alt=""></a></li>
-            <li class="brand-item"><a href="" class="brand-link"><img src="" alt=""></a></li>
+            <li class="brand-item bri1"><a href="#" class="brand-link"><img src="./assets/logos/Alibaba.svg" alt="alibaba logo"></a></li>
+            <li class="brand-item bri2"><a href="#" class="brand-link"><img src="./assets/logos/Amazon.svg" alt="amazon logo"></a></li>
+            <li class="brand-item bri3"><a href="#" class="brand-link"><img src="./assets/logos/Daraz.pk Logo.svg" alt="daraz logo"></a></li>
+            <li class="brand-item bri4"><a href="#" class="brand-link"><img src="./assets/logos/Ebay.svg" alt="ebay logo"></a></li>
+            <li class="brand-item bri5"><a href="#" class="brand-link"><img src="./assets/logos/Rakuten.svg" alt="Rakuten logo"></a></li>
+            <li class="brand-item bri6"><a href="#" class="brand-link"><img src="./assets/logos/Walmart.svg" alt="walmart logo"></a></li>
+            <li class="brand-item bri7"><a href="#" class="brand-link"><img src="./assets/logos/Target.svg" alt="target logo"></a></li>
         </ul>
 
         <!-- products article lists -->
@@ -42,53 +63,148 @@
             <secition class="product-article-container">
                 <article class="product-article">
                     <figure class="product-img-container">
-                        <img src="" alt="" class="product-img">
+                        <img src="./assets/images/tripod.png" alt="tripod image" class="product-img">
                     </figure>
+                    <div class="pro-info">
+                        <h3 class="product-article-heading">Flex Tripod</h3>
+                        <p class="price">$50.48</p>
+                        <div class="icons"></div>
+                        <p class="article-paragraph">Wordwide shifting</p>
+                        <p class="article-paragraph">available</p>
+                        <p class="article-paragraph">Buyers protection possible!</p>
+                    </div>
                 </article>
                 <article class="product-article">
                     <figure class="product-img-container">
-                        <img src="" alt="" class="product-img">
+                        <img src="./assets/images/mic.png" alt="microphone image" class="product-img">
                     </figure>
+                    <div class="pro-info">
+                        <h3 class="product-article-heading">microphone</h3>
+                        <p class="price">$120.25</p>
+                        <div class="icons"></div>
+                        <p class="article-paragraph">Wordwide shifting</p>
+                        <p class="article-paragraph">available</p>
+                        <p class="article-paragraph">Buyers protection possible!</p>
+                    </div>
                 </article>
                 <article class="product-article">
                     <figure class="product-img-container">
-                        <img src="" alt="" class="product-img">
+                        <img src="./assets/images/airpod.png" alt="airbuds image" class="product-img">
                     </figure>
+                    <div class="pro-info">
+                        <h3 class="product-article-heading">Airbuds</h3>
+                        <p class="price">$100.00</p>
+                        <div class="icons"></div>
+                        <p class="article-paragraph">Wordwide shifting</p>
+                        <p class="article-paragraph">available</p>
+                        <p class="article-paragraph">Buyers protection possible!</p>
+                    </div>
                 </article>
                 <article class="product-article">
                     <figure class="product-img-container">
-                        <img src="" alt="" class="product-img">
+                        <img src="./assets/images/drone.png" alt="drone image" class="product-img">
                     </figure>
+                    <div class="pro-info">
+                        <h3 class="product-article-heading">Drone</h3>
+                        <p class="price">$980.25</p>
+                        <div class="icons"></div>
+                        <p class="article-paragraph">Wordwide shifting</p>
+                        <p class="article-paragraph">available</p>
+                        <p class="article-paragraph">Buyers protection possible!</p>
+                    </div>
                 </article>
                 <article class="product-article">
                     <figure class="product-img-container">
-                        <img src="" alt="" class="product-img">
+                        <img src="./assets/images/lights.png" alt="Light setup image" class="product-img">
                     </figure>
+                    <div class="pro-info">
+                        <h3 class="product-article-heading">Light Setup</h3>
+                        <p class="price">$1200.00</p>
+                        <div class="icons"></div>
+                        <p class="article-paragraph">Wordwide shifting</p>
+                        <p class="article-paragraph">available</p>
+                        <p class="article-paragraph">Buyers protection possible!</p>
+                    </div>
                 </article>
                 <article class="product-article">
                     <figure class="product-img-container">
-                        <img src="" alt="" class="product-img">
+                        <img src="./assets/images/setup.png" alt="photoshoot set image" class="product-img">
                     </figure>
+                    <div class="pro-info">
+                        <h3 class="product-article-heading">Photoshoot set</h3>
+                        <p class="price">$820.40</p>
+                        <div class="icons"></div>
+                        <p class="article-paragraph">Wordwide shifting</p>
+                        <p class="article-paragraph">available</p>
+                        <p class="article-paragraph">Buyers protection possible!</p>
+                    </div>
+                </article>
+                <article class="product-article">
+                    <figure class="product-img-container">
+                        <img src="./assets/images/camera.png" alt="vlogging camera image" class="product-img">
+                    </figure>
+                    <div class="pro-info">
+                        <h3 class="product-article-heading">Vlogging Camera</h3>
+                        <p class="price">$1800.80</p>
+                        <div class="icons"></div>
+                        <p class="article-paragraph">Wordwide shifting</p>
+                        <p class="article-paragraph">available</p>
+                        <p class="article-paragraph">Buyers protection possible!</p>
+                    </div>
+                </article>
+                <article class="product-article">
+                    <figure class="product-img-container">
+                        <img src="./assets/images/single-light.png" alt="green screen image" class="product-img">
+                    </figure>
+                    <div class="pro-info">
+                        <h3 class="product-article-heading">Green Screen</h3>
+                        <p class="price">$25.48</p>
+                        <div class="icons"></div>
+                        <p class="article-paragraph">Wordwide shifting</p>
+                        <p class="article-paragraph">available</p>
+                        <p class="article-paragraph">Buyers protection possible!</p>
+                    </div>
+                </article>
+                <article class="product-article">
+                    <figure class="product-img-container">
+                        <img src="./assets/images/action.png" alt="action camera image" class="product-img">
+                    </figure>
+                    <div class="pro-info">
+                        <h3 class="product-article-heading">Action Camera</h3>
+                        <p class="price">$380.00</p>
+                        <div class="icons"></div>
+                        <p class="article-paragraph">Wordwide shifting</p>
+                        <p class="article-paragraph">available</p>
+                        <p class="article-paragraph">Buyers protection possible!</p>
+                    </div>
                 </article>
             </secition>
-
-            <!-- all products link -->
-            <article class="all-products">
-                <img src="" alt="" class="all-products-img">
-                <article class="all-products-article">
-                    <h2 class="all-products-heading"></h2>
-                    <p class="products-info"></p>
-                    <a href="" class="all-products-button"><button>Join Now</button></a>
-                </article>
-            </article>
         </section>
     </main>
+    <!-- all products link -->
+    <section class="all-products">
+        <img src="./assets/images/gear.png" alt="gear image" class="all-products-img">
+        <article class="all-products-article">
+            <h2 class="all-products-heading">Featured products at one place</h2>
+            <p class="products-info">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                consequat duis enim velit
+                mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <a href="" class="all-products-button"><button>Join Now <i class="fa-solid fa-arrow-right"></i></button></a>
+        </article>
+    </section>
 
     <!-- footer section -->
     <footer>
-        <h3 class="footer-heading">Influencer products</h3>
-        <p class="footer-description"></p>
-        <div class="footer-icons"></div>
+        <div>
+            <h3 class="footer-heading">Influencer products</h3>
+            <p class="footer-description">Copyright © 2020 influencer products All rights reserved</p>
+            <div class="footer-icons">
+                <span><i class="fa-brands fa-instagram"></i></span>
+                <span><i class="fa-brands fa-facebook-f"></i></span>
+                <span><i class="fa-brands fa-twitter"></i></span>
+                <span><i class="fa-brands fa-youtube"></i></span>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
